# validation/companyValidation.js
@@ -22,6 +22,22 @@ const companyRegistrationValidation = (data) => {
 
 }
 
+const companyLoginValidation = (data) => {
+    const schema = Joi.object(
+        {
+         
+            email: Joi.string().min(6).required().email(),
+            password: Joi.string().min(6).required()
+
+        }
+    )
+
+    return schema.validate(data)
+
+}
+
 
 
 module.exports.companyRegistrationValidation = companyRegistrationValidation
+module.exports.companyLoginValidation = companyLoginValidation
+
